--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ dist-ssr
 # Local Netlify folder
 .netlify
 .env*.local
+
+# Documentation files (keep local)
+LINKEDIN-POST.md
+FIREBASE-SETUP.md
+VERCEL-SETUP.md
+DEPLOY.md
+START-DEPLOYMENT.md
+QUICK-START.md
